--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     .results-table th, .results-table td { border: 1px solid #ddd; padding: 8px; }
     #search { padding: 10px; width: 250px; font-size: 1em; margin-top: 20px; }
     #dateToday { font-size: 1em; margin-top: 20px; }
-    #lastUpdateTime { font-size: 1em; margin-top: 5px; }
   </style>
 </head>
 <body>
@@ -24,7 +23,6 @@
   <h1>BBC Cavite - Laguna</h1>
   <h2>Unofficial Race Results</h2>
   <p id="dateToday"></p>
-  <p id="lastUpdateTime"></p>
 
   <!-- Tabs -->
   <div class="tabs">
@@ -88,53 +86,39 @@
       fetch(raceDataUrls[race])
         .then(response => response.json())
         .then(data => {
-          const rows = data.values || [];
-          const resultsTableBody = document.getElementById('resultsBody');
-          resultsTableBody.innerHTML = rows.map(row => 
-            `<tr>${row.map(cell => `<td>${cell}</td>`).join('')}</tr>`
-          ).join('');
+          const rows = data.values.map(row => {
+            return `<tr>${row.map(cell => `<td>${cell}</td>`).join('')}</tr>`;
+          }).join('');
+          document.getElementById('resultsBody').innerHTML = rows;
+          
           updateDate();
         })
-        .catch(error => {
-          console.error('Error fetching race data:', error);
-        });
+        .catch(error => console.error('Error loading race data:', error));
     }
 
-    function updateDate() {
-  const today = new Date();
-  const dateString = today.toLocaleDateString('en-US', {
-    year: 'numeric',
-    month: 'long',
-    day: 'numeric',
-  });
-  const timeString = today.toLocaleTimeString('en-US', {
-    hour: '2-digit',
-    minute: '2-digit',
-    second: '2-digit',
-  });
-  document.getElementById('dateToday').innerText = `Last Update: ${dateString}`;
-  document.getElementById('lastUpdateTime').innerText = timeString;
-}
-
     function filterResults() {
-      const searchQuery = document.getElementById('search').value.toLowerCase();
+      const query = document.getElementById('search').value.toLowerCase();
       const rows = document.querySelectorAll('#resultsBody tr');
       rows.forEach(row => {
-        const cells = row.getElementsByTagName('td');
-        let rowVisible = false;
-        for (let i = 0; i < cells.length; i++) {
-          if (cells[i].textContent.toLowerCase().includes(searchQuery)) {
-            rowVisible = true;
-            break;
+        const cells = row.querySelectorAll('td');
+        let match = false;
+        cells.forEach(cell => {
+          if (cell.textContent.toLowerCase().includes(query)) {
+            match = true;
           }
-        }
-        row.style.display = rowVisible ? '' : 'none';
+        });
+        row.style.display = match ? '' : 'none';
       });
     }
 
-    window.onload = function() {
-      loadRaceData('OC300');
-    };
+    function updateDate() {
+      const date = new Date();
+      const options = { year: 'numeric', month: 'long', day: 'numeric' };
+      const dateString = date.toLocaleString('en-US', options);
+      document.getElementById('dateToday').textContent = 'Last Update: ' + dateString;
+    }
+
+    loadRaceData('OC300');
   </script>
 
 </body>
