--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pigeon Race Results</title>
+  <title>BBC CAVLAG Race Results</title>
   <style>
     body { font-family: Arial, sans-serif; text-align: center; }
     h1 { font-size: 2.5em; margin: 20px 0; }
