--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     /* Header Style */
     header {
       background-color: black;
-      background-image: url('BBC.png'); 
+      background-image: url('D:/BBC CL Race Results/Images/BBC.png'); 
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
