--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 /* Header Style */
 header {
   background-color: black;
-  background-image: url('https://photos.google.com/photo/AF1QipNgtGllHkruAYFhFhXsH1Sct0BKBWotZD11A6dj'); /* Raw URL of the image */
+  background-image: url('https://photos.google.com/photo/AF1QipNgtGllHkruAYFhFhXsH1Sct0BKBWotZD11A6dj.jpg'); /* Raw URL of the image */
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
