--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 /* Header Style */
 header {
   background-color: black;
-  background-image: url('https://imgur.com/a/J91RDiM'); /* Raw URL of the image */
+  background-image: url('https://i.imgur.com/your-image-id.jpg'); /* Use the copied image URL */
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   height: 400px;
 }
+
   
     nav { margin: 20px 0; }
     nav a { font-size: 1.2em; margin: 10px 20px; color: #004d00; text-decoration: none; }
