--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 /* Header Style */
 header {
   background-color: black;
-  background-image: url('https://i.imgur.com/your-image-id.jpg'); /* Use the copied image URL */
+  background-image: url('https://i.imgur.com/iothLgW.png'); /* Use the copied image URL */
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
