--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 /* Header Style */
 header {
   background-color: black;
-  background-image: url('images/BBC.png'); /* Use the copied image URL */
+  background-image: url('https://raw.githubusercontent.com/rpfg/Race-Results/refs/heads/main/Images/BBC.png'); /* Use the copied image URL */
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
