--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
 /* Header Style */
 header {
-  background-color: ;
+  background-color: black;
   background-image: url('https://raw.githubusercontent.com/rpfg/Race-Results/refs/heads/main/Images/BBC.png'); /* Use the copied image URL */
   background-size: contain;
   background-position: center;
