--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ header {
       KO200_5L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO2005!A2:I?key=' + apiKey,
       KO500_5L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO5005!A2:I?key=' + apiKey,
       KO1K_5L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO1K5!A2:I?key=' + apiKey,
-      '50K': 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/50K!A2:I?key=' + apiKey,
+      '50K': 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/'50K4'!A2:H?key=' + apiKey,
       KO200_4L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO2004!A2:I?key=' + apiKey,
       TC50K_3L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/TC50K3!A2:I?key=' + apiKey,
       Patibayan1: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/Patibayan1!A2:I?key=' + apiKey,
