--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
   <style>
     body { font-family: Arial, sans-serif; text-align: center; margin: 0; padding: 0; }
   
-/* Header Style */
-header {
-  background-color: black;
-  background-image: url('https://raw.githubusercontent.com/rpfg/Race-Results/refs/heads/main/Images/BBC.png'); /* Use the copied image URL */
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 400px;
-}
-
+    /* Header Style */
+    header {
+      background-color: black;
+      background-image: url('D:/BBC CL Race Results/Images/BBC.png'); 
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+      height: 400px;
+    }
   
     nav { margin: 20px 0; }
     nav a { font-size: 1.2em; margin: 10px 20px; color: #004d00; text-decoration: none; }
