--- a/index.html
+++ b/index.html
@@ -166,6 +166,23 @@ header {
 ::-webkit-scrollbar-track {
   background: #f1f1f1;
 }
+    /* Footer */
+    footer {
+      background-color: #004d00;
+      color: white;
+      padding: 10px;
+      text-align: center;
+    }
+
+    footer a {
+      color: white;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
 
 
 
@@ -219,8 +236,11 @@ header {
 
   <p id="noDataMessage" style="display:none;">No Data</p>
 
-  <footer class="footer">
-    <p>Follow us on Facebook | BBC Cavite Laguna</p>
+  <!-- Footer -->
+  <footer>
+    <p>Follow us on social media:</p>
+    <a href="https://www.facebook.com/profile.php?id=61561642689457">Facebook</a>
+
   </footer>
 
   <script>
