--- a/index.html
+++ b/index.html
@@ -79,51 +79,68 @@ header {
 
 .results-table {
   width: 100%;
-  margin-top: 20px;
+  max-width: 1200px; /* Maximum width for larger screens */
+  margin: 20px auto; /* Center the table */
   border-collapse: collapse;
-  table-layout: fixed; /* Ensure uniform column width */
-  max-height: 400px; /* Limit the height of the table */
-  overflow-y: auto; /* Allow vertical scroll if table exceeds max-height */
-  display: block; /* Makes the table scrollable on smaller screens */
+  overflow-x: auto; /* Allow horizontal scrolling on small screens */
+  display: block; /* Display table as block for better responsiveness */
+  font-size: 1em;
+  table-layout: auto; /* Allow the table to adjust column width automatically */
 }
 
-.results-table th,
-.results-table td {
+.results-table th, .results-table td {
   border: 1px solid #ddd;
-  padding: 8px;
+  padding: 12px 8px; /* Add padding for better touch target size */
   text-align: center;
+  word-wrap: break-word; /* Prevent text overflow */
 }
 
 .results-table th {
   background-color: #004d00;
   color: white;
+  position: sticky; /* Keep headers visible during scroll */
+  top: 0;
+  z-index: 1;
 }
 
-@media (max-width: 600px) {
-  .tab {
-    font-size: 1em;
-    padding: 8px 12px;
-    margin: 3px;
+.results-table tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+.results-table tr:nth-child(odd) {
+  background-color: #ffffff;
+}
+
+.results-table tr:hover {
+  background-color: #e0e0e0;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  .results-table {
+    font-size: 0.9em; /* Smaller font for better fit */
   }
+
+  .results-table th, .results-table td {
+    padding: 10px 5px;
+  }
+}
+
+@media (max-width: 480px) {
+  .results-table {
+    font-size: 0.8em;
+  }
+
+  .results-table th, .results-table td {
+    padding: 8px 4px;
+  }
+}
+
+
+  .tab {
+    font-size: 0.8rem;
+    padding: 0.5em;
   
-  @media (max-width: 600px) {
-  .tabs {
-    display: grid; /* Use grid layout */
-    grid-template-columns: repeat(2, 1fr); /* Two equal columns */
-    gap: 15px; /* Add space between the tabs */
-    justify-content: center;
-  }
-
-  .tab {
-    font-size: 1em; /* Adjust font size for smaller screens */
-    padding: 10px; /* Adjust padding to fit better */
-  }
-}
-
-@media (max-width: 600px) {
-  #loadingIndicator img {
-    width: 100px; /* Scale down for smaller screens */
-  }
 }
 
 /* Table Row Styles */
