--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ header {
     </tbody>
   </table>
 
-  <p id="noDataMessage" style="display:none;">Congrats !!!</p>
+  <p id="noDataMessage" style="display:none;">!</p>
 
   <!-- Footer -->
   <footer>
