--- a/index.html
+++ b/index.html
@@ -351,24 +351,24 @@ header {
   <script>
     const apiKey = 'AIzaSyDnQPBVIY-hChWThux9R8WknqvuDHsDFog';
     const raceDataUrls = {
-      FR2: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/FR2!A2:K?key=' + apiKey,
-      Derby: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/DERBY!A2:J?key=' + apiKey,
-      OC300: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/OC300!A2:J?key=' + apiKey,
-      KO200_6L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO2006!A2:J?key=' + apiKey,
-      KO500_6L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO5006!A2:J?key=' + apiKey,
-      KO1K_6L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO1K6!A2:J?key=' + apiKey,
-      KO2K_6L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO2K6!A2:J?key=' + apiKey,
-      '70K': 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/70K!A2:J?key=' + apiKey,
-      KO200_5L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO2005!A2:I?key=' + apiKey,
-      KO500_5L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO5005!A2:I?key=' + apiKey,
-      KO1K_5L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO1K5!A2:I?key=' + apiKey,
-      '50K': 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/50K4!A2:H?key=' + apiKey,
+      FR2: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/FR2!A2:L?key=' + apiKey,
+      Derby: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/DERBY!A2:K?key=' + apiKey,
+      OC300: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/OC300!A2:K?key=' + apiKey,
+      KO200_6L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO2006!A2:K?key=' + apiKey,
+      KO500_6L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO5006!A2:K?key=' + apiKey,
+      KO1K_6L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO1K6!A2:K?key=' + apiKey,
+      KO2K_6L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO2K6!A2:K?key=' + apiKey,
+      '70K': 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/70K!A2:K?key=' + apiKey,
+      KO200_5L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO2005!A2:J?key=' + apiKey,
+      KO500_5L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO5005!A2:J?key=' + apiKey,
+      KO1K_5L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO1K5!A2:J?key=' + apiKey,
+      '50K': 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/50K4!A2:I?key=' + apiKey,
       KO200_4L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO2004!A2:I?key=' + apiKey,
-      TC50K_3L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/TC50K!A2:G?key=' + apiKey,
-      KO200_3L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO2003!A2:G?key=' + apiKey,
-      KO500_3L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO5003!A2:G?key=' + apiKey,
-      KO1K_3L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO1K3!A2:G?key=' + apiKey,
-      KO2K_3L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO2K3!A2:G?key=' + apiKey,
+      TC50K_3L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/TC50K!A2:H?key=' + apiKey,
+      KO200_3L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO2003!A2:H?key=' + apiKey,
+      KO500_3L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO5003!A2:H?key=' + apiKey,
+      KO1K_3L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO1K3!A2:H?key=' + apiKey,
+      KO2K_3L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO2K3!A2:H?key=' + apiKey,
       Patibayan1: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/Patibayan1!A2:I?key=' + apiKey,
       Patibayan2: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/Patibayan2!A2:I?key=' + apiKey,
     };
