--- a/index.html
+++ b/index.html
@@ -304,6 +304,10 @@ header {
     <div class="tab" id="tabKO500_3L" onclick="loadRaceData('KO500_3L')">KO500 3 Laps</div>
     <div class="tab" id="tabKO1K_3L" onclick="loadRaceData('KO1K_3L')">KO1K 3 Laps</div>
     <div class="tab" id="tabKO2K_3L" onclick="loadRaceData('KO2K_3L')">KO2K 3 Laps</div>
+    <div class="tab" id="tab30K" onclick="loadRaceData('30K')">30K 2 Laps</div>
+    <div class="tab" id="tabKO200_2L" onclick="loadRaceData('KO200_2L')">KO200 2 Laps</div>
+    <div class="tab" id="tabKO500_2L" onclick="loadRaceData('KO500_2L')">KO500 2 Laps</div>
+    <div class="tab" id="tabKO1K_2L" onclick="loadRaceData('KO1K_2L')">KO1K 2 Laps</div>
     <div class="tab" id="tabPatibayan1" onclick="loadRaceData('Patibayan1')">Patibayan 1</div>
     <div class="tab" id="tabPatibayan2" onclick="loadRaceData('Patibayan2')">Patibayan 2</div>
     
@@ -369,8 +373,13 @@ header {
       KO500_3L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO5003!A2:H?key=' + apiKey,
       KO1K_3L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO1K3!A2:H?key=' + apiKey,
       KO2K_3L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO2K3!A2:H?key=' + apiKey,
-      Patibayan1: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/Patibayan1!A2:I?key=' + apiKey,
-      Patibayan2: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/Patibayan2!A2:I?key=' + apiKey,
+      '30K': 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/30K!A2:G?key=' + apiKey,
+      KO200_2L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO2002!A2:G?key=' + apiKey,
+      KO500_2L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO5002!A2:G?key=' + apiKey,
+      KO1K_2L: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/KO1K2!A2:G?key=' + apiKey,
+      Patibayan1: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/Patibayan1!A2:C?key=' + apiKey,
+      Patibayan2: 'https://sheets.googleapis.com/v4/spreadsheets/19wLVtg4FcABUMP94WmcQofDrWQPEQMbY7guTtoHlYVY/values/Patibayan2!A2:C?key=' + apiKey,
+      
     };
 
     let currentTab = 'FR2';
